--- a/AIS_LO_System/Views/LecturerDashboard/Index.cshtml
+++ b/AIS_LO_System/Views/LecturerDashboard/Index.cshtml
@@ -40,13 +40,22 @@
         <div class="dash-topbar">
             <button class="hamburger" type="button" onclick="toggleSidebar()">☰</button>
 
-            <div class="brand">
-                <img src="~/images/ais-logo.png" alt="AIS" class="brand-logo" />
+            <div class="brand width=" 5000" height="5000"">
+                <img src="~/images/AIS_logo.png" alt="AIS" class="brand-logo" />
             </div>
 
             <div class="topbar-right">
                 <span class="pill">@User.Identity?.Name</span>
+
+                <form asp-controller="Account"
+                      asp-action="Logout"
+                      method="post"
+                      class="logout-form">
+                    @Html.AntiForgeryToken()
+                    <button type="submit" class="logout-btn">Logout</button>
+                </form>
             </div>
+
         </div>
 
         <div class="dash-content">
